--- a/giphy/src/main/res/values/strings.xml
+++ b/giphy/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="loading">Loading…</string>
-    <string name="search_items_empty">No reviews…</string>
+    <string name="search_items_empty">No search results…</string>
     <string name="network_error">Network error</string>
 
     <!--Accessibility-->
-    <string name="movie_desc">Movie</string>
-    <string name="mpaa_empty">No MPAA Rating</string>
+    <string name="search_title">Giphy GIF Search</string>
+    <string name="search_items_desc">No GIFS found</string>
 </resources>
